@@ -1,3 +1,7 @@
+09/12/2011
+
+Added BlockAnalyser delegate to cater for nest block parsing correctly.
+
 05/12/2011
 
 Added method to block node to know if it contains an answer expression. Start
